--- a/AA-windows.tex
+++ b/AA-windows.tex
@@ -17,12 +17,12 @@ editing text files.
 Our recommended editor for Windows is NotePad++ which
 can be downloaded and installed from:
 
-\url{http://sourceforge.net/projects/notepad-plus/files/}
+\url{https://notepad-plus-plus.org/}
 
 Then download a recent version of Python 2 from the
 \url{www.python.org} web site.
 
-\url{http://www.python.org/download/releases/2.7.5/}
+\url{https://www.python.org/downloads/}
 
 Once you have installed Python, you should have a new
 folder on your computer like {\tt C:{\textbackslash}Python27}.
@@ -44,15 +44,15 @@ print 'Hello Chuck'
 Except that you should change it to be your name.  Lets
 save the file into {\tt Desktop{\textbackslash}py4inf{\textbackslash}prog1.py}.
 
-The run the command line.  Different versions of Windows
+The open a command-line window.  Different versions of Windows
 do this differently:
 
 \begin{itemize}
-\item Windows Vista and Windows-7: Press {\bf Start}
+\item Windows Vista and Windows 7: Press {\bf Start}
 and then in the command search window enter the word
 {\tt command} and press enter.
 
-\item Windows-XP: Press {\bf Start}, then {\bf Run}, and 
+\item Windows XP: Press {\bf Start}, then {\bf Run}, and 
 then enter {\tt cmd} in the dialog box and press {\bf OK}.
 \end{itemize}
 
@@ -81,7 +81,7 @@ C:\Users\csev\Desktop\py4inf> dir
 \end{verbatim}
 \afterverb
 %
-To list your files.  You should see the {\tt prog1.py} when 
+to list your files.  You should see the {\tt prog1.py} when 
 you type the {\tt dir} command.
 
 To run your program, simply type the name of your file at the 
@@ -95,18 +95,18 @@ C:\Users\csev\Desktop\py4inf>
 \end{verbatim}
 \afterverb
 %
-You can edit the file in NotePad++, save it and then switch back
+You can edit the file in NotePad++, save it, and then switch back
 to the command line and execute the program again by typing
-the file name again at the command line prompt.
+the file name again at the command-line prompt.
 
-If you get confused in the command line window - just close it
-and start a new one.
+If you get confused in the command-line window, just close it
+and open a new one.
 
-Hint: You can also press the ``up-arrow'' in the command line to 
+Hint: You can also press the ``up arrow'' at the command line to 
 scroll back and run a previously entered command again.
 
 You should also look in the preferences for NotePad++ and set it 
-to expand tab characters to be four spaces.  It will save you lots
+to expand tab characters to be four spaces.  This will save you lots
 of effort looking for indentation errors.
 
 You can also find further information on editing and running 
