--- a/AA-windows.tex
+++ b/AA-windows.tex
@@ -33,7 +33,7 @@ exercise, put a folder on your Desktop named
 {\tt py4inf}.  It is best to keep your folder names short
 and not to have any spaces in your folder or file name.
 
-Lets make our first Python program be:
+Let's make our first Python program be:
 
 \beforeverb
 \begin{verbatim}
