--- a/AA-windows.tex
+++ b/AA-windows.tex
@@ -41,10 +41,10 @@ print 'Hello Chuck'
 \end{verbatim}
 \afterverb
 %
-Except that you should change it to be your name.  Lets
-save the file into {\tt Desktop{\textbackslash}py4inf{\textbackslash}prog1.py}.
+Except that you should change it to be your name.  Save the file
+into {\tt Desktop{\textbackslash}py4inf{\textbackslash}prog1.py}.
 
-The open a command-line window.  Different versions of Windows
+Then open a command-line window.  Different versions of Windows
 do this differently:
 
 \begin{itemize}
