--- a/AB-apple.tex
+++ b/AB-apple.tex
@@ -5,13 +5,13 @@
 
 In this appendix, we walk through a series of steps
 so you can run Python on Macintosh.  Since Python is
-already included in the Macintosh Operating system, we need to 
-learn how to edit Python files and run Python programs
+already included in the Macintosh Operating system, we only
+need to learn how to edit Python files and run Python programs
 in the terminal window.
 
-There approaches you can take to editing and running
-Python programs, and this is just one
-approach we have found to be very simple.
+There are many approaches you can take to editing and running
+Python programs, and this is just one approach we have found
+to be very simple.
 
 First, you need to install a programmer editor.  You
 do not want to use TextEdit or Microsoft Word to edit
@@ -24,10 +24,10 @@ can be downloaded and installed from:
 
 \url{http://www.barebones.com/products/TextWrangler/}
 
-To create a Python program, run from 
+To create a Python program, run 
 {\bf TextWrangler} from your {\bf Applications} folder.
 
-Lets make our first Python program be:
+Let's make our first Python program be:
 
 \beforeverb
 \begin{verbatim}
@@ -36,15 +36,15 @@ print 'Hello Chuck'
 \afterverb
 %
 Except that you should change it to be your name.  
-Lets save the file in a folder on your Desktop named 
+Save the file in a folder on your Desktop named 
 {\tt py4inf}.  It is best to keep your folder names short
 and not to have any spaces in your folder or file name.
 Once you have made the folder, save the file 
 into {\tt Desktop{\textbackslash}py4inf{\textbackslash}prog1.py}.
 
-The run the {\bf Terminal} program.  The easiest way is to 
+Then run the {\bf Terminal} program.  The easiest way is to 
 press the Spotlight icon (the magnifying glass) in the upper
-right of your screen and enter ``terminal'' and launch the
+right of your screen, enter ``terminal'', and launch the
 application that comes up.
 
 You start in your ``home directory''.  You can see the current 
@@ -58,8 +58,8 @@ directory by typing the {\tt pwd} command in the terminal window.
 \end{verbatim}
 \afterverb
 %
-We must be in the folder that contains your Python program 
-to run the program.  We user the {\tt cd} command to move to a new 
+you must be in the folder that contains your Python program 
+to run the program.  Use the {\tt cd} command to move to a new 
 folder and then the {\tt ls} command to list the files in the 
 folder.
 
@@ -74,8 +74,7 @@ prog1.py
 \afterverb
 %
 To run your program, simply type the {\tt python} command followed
-by the name of your file at the 
-command prompt and press enter.
+by the name of your file at the command prompt and press enter.
 
 \beforeverb
 \begin{verbatim}
@@ -85,12 +84,12 @@ Hello Chuck
 \end{verbatim}
 \afterverb
 %
-You can edit the file in TextWrangler, save it and then switch back
+You can edit the file in TextWrangler, save it, and then switch back
 to the command line and execute the program again by typing
-the file name again at the command line prompt.
+the file name again at the command-line prompt.
 
-If you get confused in the command line window - just close it
-and start a new one.
+If you get confused in the command-line window, just close it
+and open a new one.
 
 Hint: You can also press the ``up-arrow'' in the command line to 
 scroll back and run a previously entered command again.
