--- a/AD-copyright.tex
+++ b/AD-copyright.tex
@@ -32,14 +32,14 @@ in situations that some might consider commercial.
 
 \begin{itemize}
 \item If you are printing a limited number of copies of all or part of 
-this book for use in a course (e.g. like a coursepack), then 
+this book for use in a course (e.g., like a coursepack), then 
 you are granted CC-BY license to these materials for that purpose.
 
 \item If you are a teacher at a university and you translate this book 
 into a language other than English and teach using the translated book, then 
 you can contact me and I will granted you a CC-BY-SA 
 license to these materials with respect to the publication of your 
-translation. In particular you will be permitted 
+translation. In particular, you will be permitted 
 to sell the resulting translated book commercially.  
 \end{itemize}
 
