--- a/book.tex
+++ b/book.tex
@@ -19,7 +19,7 @@
 \usepackage{upquote}
 
 \newcommand{\thetitle}{Python for Informatics: Exploring Information}
-\newcommand{\theversion}{0.0.9-d2}
+\newcommand{\theversion}{2.7.0}
 
 \makeindex
 
