Three moar typos

--- a/03-conditional.tex
+++ b/03-conditional.tex
@@ -150,7 +150,7 @@ false, the indented statement is skipped.
 \index{statement!compound}
 
 {\tt if} statements have the same structure as function definitions
-or {\tt for} loops\footnote{We will kearn about functions in Chapter 4
+or {\tt for} loops\footnote{We will learn about functions in Chapter 4
 and loops in Chapter 5.}.The statement consists of a header line
 that ends with the colon character (:) 
 followed by an indented block.  Statements like this are
