--- a/06-strings.tex
+++ b/06-strings.tex
@@ -669,7 +669,7 @@ so you can embed a value in a sentence:
 If there is more than one format sequence in the string,
 the second argument has to be a tuple\footnote{A tuple is a
 sequence of comma-separated values inside a pair of brackets.
-We will covver tuples in Chapter 10}.  Each format sequence is
+We will cover tuples in Chapter 10}.  Each format sequence is
 matched with an element of the tuple, in order.
 
 The following example uses \verb"'%d'" to format an integer,
