--- a/15-viz.tex
+++ b/15-viz.tex
@@ -184,7 +184,7 @@ How many pages:
 %
 In this sample run, we told it to crawl a website and retrieve two 
 pages.  If you restart the program and tell it to crawl more
-pages, it will not recrawl any pages already in the database.  Upon 
+pages, it will not re-crawl any pages already in the database.  Upon 
 restart it goes to a random non-crawled page and starts there.  So 
 each successive run of {\bf spider.py} is additive.
 
