Fix typo from Fernando in twjoin.py

--- a/14-database.tex
+++ b/14-database.tex
@@ -1217,7 +1217,7 @@ for row in cur :
 print count, 'rows.'
 
 cur.execute('''SELECT * FROM Follows JOIN People 
-    ON Follows.from_id = People.id WHERE People.id = 2''')
+    ON Follows.to_id = People.id WHERE Follows.from_id = 2''')
 count = 0
 print 'Connections for id=2:'
 for row in cur :
