--- a/08-lists.tex
+++ b/08-lists.tex
@@ -634,7 +634,7 @@ week from those lines that start with ``From ''?
 
 \beforeverb
 \begin{alltt}
-From stephen.marquard@uct.ac.za {\bf Sat} Jan  5 09:14:16 2008
+From stephen.marquard@uct.ac.za Sat Jan  5 09:14:16 2008
 \end{alltt}
 \afterverb
 
