--- a/08-lists.tex
+++ b/08-lists.tex
@@ -1045,7 +1045,7 @@ week on the from lines of our file:
 
 \beforeverb
 \begin{alltt}
-From stephen.marquard@uct.ac.za {\bf Sat} Jan  5 09:14:16 2008
+From stephen.marquard@uct.ac.za Sat Jan  5 09:14:16 2008
 \end{alltt}
 \afterverb
 
