Thanks to chaim katz

--- a/06-strings.tex
+++ b/06-strings.tex
@@ -668,7 +668,7 @@ so you can embed a value in a sentence:
 %
 If there is more than one format sequence in the string,
 the second argument has to be a tuple\footnote{A tuple is a
-sequence of comma-separated values inside a pair of brackets.
+sequence of comma-separated values inside a pair of parenthesis.
 We will cover tuples in Chapter 10}.  Each format sequence is
 matched with an element of the tuple, in order.
 
