Tweaks from Stephen

--- a/13-web.tex
+++ b/13-web.tex
@@ -328,7 +328,7 @@ You can read the online documentation for this service, but it is quite simple
 and you can even test it using a browser by typing the following URL into your 
 browser:
 
-\url{http://maps.googleapis.com/maps/api/geocode/json?sensor=false &address=Ann+Arbor%2C+MI}
+\url{http://maps.googleapis.com/maps/api/geocode/json?address=Ann+Arbor%2C+MI}
 
 Make sure to unwrap the URL and remove any spaces from the URL before pasting
 it into your browser.
@@ -389,7 +389,7 @@ JSON has been removed):
 $ python geojson.py
 Enter location: Ann Arbor, MI
 Retrieving http://maps.googleapis.com/maps/api/
-  geocode/json?sensor=false&address=Ann+Arbor%2C+MI
+  geocode/json?address=Ann+Arbor%2C+MI
 Retrieved 1669 characters
 {
     "status": "OK", 
