--- a/15-viz.tex
+++ b/15-viz.tex
@@ -73,13 +73,13 @@ Found in database  Tufts University
 
 Resolving Monash University
 Retrieving http://maps.googleapis.com/maps/api/
-    geocode/json?sensor=false&address=Monash+University
+    geocode/json?address=Monash+University
 Retrieved 2063 characters {    "results" : [  
 {u'status': u'OK', u'results': ... }
 
 Resolving Kokshetau Institute of Economics and Management
 Retrieving http://maps.googleapis.com/maps/api/
-    geocode/json?sensor=false&address=Kokshetau+Inst ...
+    geocode/json?address=Kokshetau+Inst ...
 Retrieved 1749 characters {    "results" : [  
 {u'status': u'OK', u'results': ... }
 ...
